fixed collapse

--- a/src/components/Pages/CompanyPage/CompanyPage.css
+++ b/src/components/Pages/CompanyPage/CompanyPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .container{
@@ -11,6 +12,9 @@
 
 .content{
     margin: 3em
+} 
+.content :disabled{
+    overflow: hidden;
 }
 
 .addButton{
